--- a/MvcMusic/Views/Store/Browse.cshtml
+++ b/MvcMusic/Views/Store/Browse.cshtml
@@ -1,14 +1,21 @@
 ﻿@model MvcMusic.Models.Genre 
 @{ 
-    ViewBag.Title = "Browse"; 
+    ViewBag.Title = "Browse Albums"; 
 } 
-<h2>Browsing Genre: @Model.Name</h2> 
+  
+<div class="genre"> 
+    <h3><em>@Model.Name</em> Albums</h3> 
+  
+    <ul id="album-list"> 
+        @foreach (var album in Model.Albums)
+        { 
+            <li> 
+                <a href="@Url.Action("Details", new { id = album.AlbumId })"> 
+                    <img alt="@album.Title" src="@album.AlbumArtUrl" /> 
+                    <span>@album.Title</span> 
+                </a> 
+            </li> 
+        } 
+    </ul> 
+</div> 
  
-<ul> 
-    @foreach (var album in Model.Albums) 
-    { 
-        <li> 
-            @Html.ActionLink(album.Title, "Details", new { id = album.AlbumId }) 
-        </li> 
-    } 
-</ul> 
